--- a/ROTRExperiments/.classpath
+++ b/ROTRExperiments/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/user/Documents/GitHub/RulesOfTheRoadExperiments/ROTRExperiments/resources/SimpleCarSimulator.jar"/>
+	<classpathentry kind="lib" path="F:/git/SimpleCarSimulator2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
